--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -1,9 +1,10 @@
 @use "sass:map";
 
-$govuk-compatibility-govukfrontendtoolkit: true;
+// $govuk-compatibility-govukfrontendtoolkit: true;
+$govuk-assets-path: "/gds-upgrade/";
 
-@import "../../node_modules/select2/src/scss/core";
 @import '../../node_modules/govuk-frontend/govuk/all';
+@import "../../node_modules/select2/src/scss/core";
 @import "variables";
 @import "mixins";
 @import "layout";
