--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -7,18 +7,16 @@
 
   <title>DfE</title>
 
-  <link rel="stylesheet" href="/static/css/govuk/fonts.css">
-  <link rel="stylesheet" href="/static/css/govuk/govuk-template.css">
+  <!-- <link rel="stylesheet" href="/static/css/govuk/fonts.css"> -->
+  <!-- <link rel="stylesheet" href="/static/css/govuk/govuk-template.css"> -->
   <link rel="stylesheet" href="/static/css/screen.css">
 
   <link rel="shortcut icon" href="/static/images/favicon.ico" type="image/x-icon" />
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/static/images/apple-icon-180x180.png">
-  <link rel="apple-touch-icon" sizes="167x167" href="/static/images/apple-icon-167x167.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/static/images/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" href="/static/images/apple-icon.png">
-
-  <meta property="og:image" content="/static/images/opengraph-image.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/static/images/govuk-apple-touch-icon-180x180.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="/static/images/govuk-apple-touch-icon-167x167.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/static/images/govuk-apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" href="/static/images/govuk-apple-touch-icon.png">
 
   {% block styles %}
 
@@ -26,19 +24,12 @@
 
 
 </head>
-<body class="{% if hideHeader == true %} white-bg {% endif %}">
+
+<body class="govuk-template__body {% if hideHeader == true %} white-bg {% endif %}">
 
 <script>document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script>
 
-<div id="skiplink-container">
-  <div>
-    <a href="#content" class="skiplink">Skip to content</a>
-  </div>
-</div>
-
-<div id="global-cookie-message">
-  <p class="govuk-body">GOV.UK uses cookies to make the site simpler. <a href="https://www.gov.uk/help/cookies" class="govuk-link">Find out more about cookies</a></p>
-</div>
+<a href="#content" class="govuk-skip-link">Skip to main content</a>
 
 <div class="wrapper">
 
@@ -108,16 +99,46 @@
 
 {% if hideFooter != true %}
 
-<footer id="footer">
-  <div class="footer-wrapper">
-    <nav>
-      <ul>
-        <li><a href="help.html" class="govuk-link">Help</a></li>
-        <li><a href="cookies.html" class="govuk-link">Cookies</a></li>
-        <li><a href="privacy.html" class="govuk-link">Privacy policy</a></li>
-        <li><a href="terms.html" class="govuk-link">Terms and conditions</a></li>
-      </ul>
-    </nav>
+<footer class="govuk-footer " role="contentinfo">
+  <div class="govuk-width-container ">
+    <div class="govuk-footer__meta">
+      <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
+        <h2 class="govuk-visually-hidden">Support links</h2>
+        <ul class="govuk-footer__inline-list">
+          <li class="govuk-footer__inline-list-item">
+            <a class="govuk-footer__link" href="help.html">
+              Help
+            </a>
+          </li>
+          <li class="govuk-footer__inline-list-item">
+            <a class="govuk-footer__link" href="cookies.html">
+              Cookies
+            </a>
+          </li>
+          <li class="govuk-footer__inline-list-item">
+            <a class="govuk-footer__link" href="privacy.html">
+              Privacy policy
+            </a>
+          </li>
+          <li class="govuk-footer__inline-list-item">
+            <a class="govuk-footer__link" href="terms.html">
+              Terms and conditions
+            </a>
+          </li>
+        </ul>
+
+        <svg aria-hidden="true" focusable="false" class="govuk-footer__licence-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 483.2 195.7" height="17" width="41">
+          <path fill="currentColor" d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145" />
+        </svg>
+        <span class="govuk-footer__licence-description">
+          All content is available under the
+          <a class="govuk-footer__link" href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">Open Government Licence v3.0</a>, except where otherwise stated
+        </span>
+      </div>
+      <div class="govuk-footer__meta-item">
+        <a class="govuk-footer__link govuk-footer__copyright-logo" href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/">© Crown copyright</a>
+      </div>
+    </div>
   </div>
 </footer>
 
