--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -1,5 +1,5 @@
 .global-navigation {
-  border-bottom: 1px solid map.get($_govuk-colour-palette-legacy, "grey-2");
+  border-bottom: 1px solid map.get($govuk-colours, "mid-grey");
   nav {
     @include govuk-media-query(desktop) {
       margin: 0 auto;
@@ -19,7 +19,7 @@
     }
   }
   li {
-    border-bottom: 1px solid map.get($_govuk-colour-palette-legacy, "grey-2");
+    border-bottom: 1px solid map.get($govuk-colours, "mid-grey");
     position: relative;
     @include govuk-media-query(tablet) {
       float: left;
@@ -32,14 +32,14 @@
     display: block;
     padding: 8px 15px 6px;
     text-decoration: none;
-    color: map.get($_govuk-colour-palette-legacy, "black");
+    color: map.get($govuk-colours, "black");
     text-decoration: underline;
     &.current {
       font-weight: bold;
       text-decoration: none;
       &:after {
         display: block;
-        background: map.get($_govuk-colour-palette-legacy, "blue");
+        background: map.get($govuk-colours, "blue");
         content: "";
         width:5px;
         top: 0;
@@ -61,7 +61,7 @@
 
 
 .main-nav {
-  border-bottom: 1px solid map.get($_govuk-colour-palette-legacy, "grey-2");
+  border-bottom: 1px solid map.get($govuk-colours, "mid-grey");
   nav {
     @include govuk-media-query(desktop) {
       margin: 0 auto;
@@ -81,7 +81,7 @@
     }
   }
   li {
-    border-bottom: 1px solid map.get($_govuk-colour-palette-legacy, "grey-2");
+    border-bottom: 1px solid map.get($govuk-colours, "mid-grey");
     position: relative;
     @include govuk-media-query(tablet) {
       float: left;
@@ -94,12 +94,12 @@
     display: block;
     padding: 7px 15px 5px;
     text-decoration: none;
-    color: map.get($_govuk-colour-palette-legacy, "black");
+    color: map.get($govuk-colours, "black");
     &.current {
       font-weight: bold;
       &:after {
         display: block;
-        background: map.get($_govuk-colour-palette-legacy, "blue");
+        background: map.get($govuk-colours, "blue");
         content: "";
         width:5px;
         top: 0;
@@ -120,16 +120,16 @@
 
 ul.tabs {
   list-style: none;
-  border: 1px solid map.get($_govuk-colour-palette-legacy, "grey-2");
+  border: 1px solid map.get($govuk-colours, "mid-grey");
   margin:20px 0;
   @include govuk-clearfix;
   @include govuk-media-query(tablet) {
     border: none;
-    border-bottom: 1px solid map.get($_govuk-colour-palette-legacy, "grey-2");
+    border-bottom: 1px solid map.get($govuk-colours, "mid-grey");
   }
   li {
     border: 1px solid transparent;
-    border-bottom: 1px solid map.get($_govuk-colour-palette-legacy, "grey-2");
+    border-bottom: 1px solid map.get($govuk-colours, "mid-grey");
     position: relative;
     margin-bottom: -1px;
     @include govuk-media-query(tablet) {
@@ -145,7 +145,7 @@ ul.tabs {
   }
   li.active {
     @include govuk-media-query(tablet) {
-      border-color: map.get($_govuk-colour-palette-legacy, "grey-2");
+      border-color: map.get($govuk-colours, "mid-grey");
       border-bottom-color: #fff;
     }
   }
