--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -35,7 +35,7 @@
 }
 
 .service-status {
-  border-bottom:1px solid map.get($_govuk-colour-palette-legacy, "grey-2");
+  border-bottom:1px solid map.get($govuk-colours, "mid-grey");
   position: relative;
   margin-bottom: -1px;
   padding: 0 15px;
@@ -55,9 +55,9 @@
 }
 
 .header-user {
-  // border-bottom:1px solid map.get($_govuk-colour-palette-legacy, "grey-2");
+  // border-bottom:1px solid map.get($govuk-colours, "mid-grey");
   .header-inner {
-    // border-top: 10px solid map.get($_govuk-colour-palette-legacy, "blue");
+    // border-top: 10px solid map.get($govuk-colours, "blue");
     margin: 0 15px;
     font-size: 14px;
     line-height: 1.2em;
@@ -105,7 +105,7 @@
   a {
     display: block;
     padding: 12px 15px 10px;
-    color: map.get($_govuk-colour-palette-legacy, "black");
+    color: map.get($govuk-colours, "black");
     &:focus {
       outline: 0;
     }
