--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -8,8 +8,8 @@
 }
 
 .row > div > span {
-  background: map.get($_govuk-colour-palette-legacy, "grey-3");
-  color: map.get($_govuk-colour-palette-legacy, "grey-4");
+  background: map.get($govuk-colours, "light-grey");
+  color: map.get($govuk-colours, "light-grey");
   display: block;
   text-align: center;
   padding: 15px 0;
@@ -45,7 +45,7 @@
 }
 
 aside {
-  border-top: 5px solid map.get($_govuk-colour-palette-legacy, "blue");
+  border-top: 5px solid map.get($govuk-colours, "blue");
   padding-top: 15px;
   margin-top: 15px;
   > h2.govuk-heading-m {
@@ -167,14 +167,14 @@ ul.list-table {
   margin-bottom: 15px;
   li {
     padding: 10px 0;
-    border-top: 1px solid map.get($_govuk-colour-palette-legacy, "grey-2");
+    border-top: 1px solid map.get($govuk-colours, "mid-grey");
     p {
       font-weight:bold;
       margin: 0;
     }
     .meta {
       @include govuk-font(16);
-      color: map.get($_govuk-colour-palette-legacy, "grey-1");
+      color: map.get($govuk-colours, "dark-grey");
     }
   }
 }
@@ -192,7 +192,7 @@ img.responsive {
 .highlight {
   margin: 25px 0;
   padding: 25px;
-  border: 1px solid map.get($_govuk-colour-palette-legacy, "grey-2");
+  border: 1px solid map.get($govuk-colours, "mid-grey");
   @include govuk-media-query(tablet) {
     margin: 0 25px 25px;
   }
