--- a/src/sass/pages/_requests.scss
+++ b/src/sass/pages/_requests.scss
@@ -1,10 +1,10 @@
 .request {
   padding: 10px;
-  background: map.get($_govuk-colour-palette-legacy, "grey-4");
+  background: map.get($govuk-colours, "light-grey");
   margin-bottom: 10px;
   position: relative;
-  border: 1px solid map.get($_govuk-colour-palette-legacy, "grey-3");
-  border-left: 5px solid map.get($_govuk-colour-palette-legacy, "grey-3");
+  border: 1px solid map.get($govuk-colours, "light-grey");
+  border-left: 5px solid map.get($govuk-colours, "light-grey");
   p {
     margin: 0;
     a {
@@ -37,11 +37,11 @@
 
 .requestV2 {
   padding: 15px;
-  background: map.get($_govuk-colour-palette-legacy, "grey-4");
+  background: map.get($govuk-colours, "light-grey");
   margin-bottom: 10px;
   position: relative;
-  border: 1px solid map.get($_govuk-colour-palette-legacy, "grey-3");
-  border-left: 5px solid map.get($_govuk-colour-palette-legacy, "grey-3");
+  border: 1px solid map.get($govuk-colours, "light-grey");
+  border-left: 5px solid map.get($govuk-colours, "light-grey");
   p {
     @include govuk-media-query(tablet) {
       margin: 0;
@@ -89,9 +89,9 @@
 }
 
 .overdue {
-  border-left: 5px solid map.get($_govuk-colour-palette-legacy, "red");
+  border-left: 5px solid map.get($govuk-colours, "red");
 }
 
 .overdue-text {
-  color: map.get($_govuk-colour-palette-legacy, "red");
+  color: map.get($govuk-colours, "red");
 }
