--- a/src/sass/pages/_splash.scss
+++ b/src/sass/pages/_splash.scss
@@ -2,7 +2,7 @@
   margin: 15px auto;
   max-width: 600px;
   padding: 30px;
-  border: 10px solid map.get($_govuk-colour-palette-legacy, "blue");
+  border: 10px solid map.get($govuk-colours, "blue");
   h1 {
     font-size: 50px;
     font-weight: bold;
@@ -29,7 +29,7 @@
 @include govuk-media-query(tablet) {
   .splash {
     margin: 100px auto;
-    border: 20px solid map.get($_govuk-colour-palette-legacy, "blue");
+    border: 20px solid map.get($govuk-colours, "blue");
     padding: 50px;
 
     h1 {
