--- a/src/sass/pages/_task-list.scss
+++ b/src/sass/pages/_task-list.scss
@@ -48,14 +48,14 @@ $task-list-indent: 35px;
 }
 
 .task-list-item {
-  border-bottom: 1px solid map.get($_govuk-colour-palette-legacy, "grey-2");
+  border-bottom: 1px solid map.get($govuk-colours, "mid-grey");
   @include govuk-responsive-padding(6, "top");
   @include govuk-responsive-padding(6, "bottom");
   @include govuk-clearfix;
 }
 
 .task-list-item:first-child {
-  border-top: 1px solid map.get($_govuk-colour-palette-legacy, "grey-2");
+  border-top: 1px solid map.get($govuk-colours, "mid-grey");
 }
 
 
@@ -76,7 +76,7 @@ $task-list-indent: 35px;
 }
 
 .task-pending {
-  background-color: map.get($_govuk-colour-palette-legacy, "grey-1");
+  background-color: map.get($govuk-colours, "dark-grey");
 }
 .task-rejected {
   background-color: #d32f32;
