--- a/src/sass/_forms.scss
+++ b/src/sass/_forms.scss
@@ -31,7 +31,7 @@ fieldset.highlight {
   .error-message {
     display: none;
   }
-  &.govuk-form-group-error .error-message {
+  &.govuk-form-group-error .govuk-error-message {
     display: block;
   }
   .help-text {
