Updates to cookie banner

--- a/app/views/concepts/components/cookie-banner.html
+++ b/app/views/concepts/components/cookie-banner.html
@@ -1,28 +1,37 @@
-<div class="global-cookie-message-dfe-sign-in" id="dsi-cookie-banner">
-    <div class="govuk-grid-row global-cookie-message-dfe-sign-in__cookie-message-container">
+<div id="dsi-cookie-banner" class="govuk-cookie-banner " role="region" aria-label="Cookies on DfE Sign in">
+    <div class="govuk-cookie-banner__message govuk-width-container">
+  
+      <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <h2 class="govuk-heading-m govuk-heading-m--govuk">
-                Tell us whether you accept cookies
-            </h2>
-            <p class="govuk-body govuk-body--shim">
+          <h2 class="govuk-cookie-banner__heading govuk-heading-m">
+            Tell us whether you accept cookies
+          </h2>
+  
+          <div class="govuk-cookie-banner__content">
+            <p>
                 We use cookies to
                 <a href="<%=locals.urls.interactions || ''%>/cookies" class="govuk-link">collect information</a>
                 about how you use DfE Sign in.
+            </p>
+            <p>
                 We use this information to improve our services
                 and to make this website work as efficently as possible.
             </p>
-            <div class="govuk-grid-row">
-                <div class="govuk-grid-column-one-half">
-                    <button class="button button--govuk cookie-accept">
-                        Accept all cookies
-                    </button>
-                </div>
-                <div class="govuk-grid-column-one-half">
-                    <a class="button button--govuk" href="<%=locals.urls.interactions || ''%>/cookies">
-                        Set cookie preferences
-                    </a>
-                </div>
-            </div>
+          </div>
         </div>
+      </div>
+  
+      <div class="govuk-button-group">
+        <button value="accept" type="button" name="cookies" class="govuk-button cookie-accept" data-module="govuk-button">
+            Accept analytics cookies
+        </button>
+        <!-- TODO check if we want button or link -->
+        <a href="<%=locals.urls.interactions || ''%>/cookies" type="button" name="cookies" class="govuk-button" data-module="govuk-button">
+            Set cookie preferences
+        </a>
+        <!-- <a href="<%=locals.urls.interactions || ''%>/cookies" name="cookies" class="govuk-link" data-module="govuk-button">
+            Set cookie preferences
+        </a> -->
+      </div>
     </div>
-</div>
+  </div>
