Commit to check actual diff

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -6,7 +6,7 @@
   background-image: url('../images/gov.uk_logotype_crown.png');
 }
 
-@include media(tablet) {
+@include govuk-media-query(tablet) {
   #proposition-name {
     margin-top: 5px;
     display: block;
@@ -24,61 +24,61 @@
   margin-top: 14px;
   font-size: 18px;
   line-height: 1.2;
-  @include media("379px") {
-    margin: 14px 0 0 0;
-  }
-  @include media(tablet) {
+  @include govuk-media-query(tablet) {
     font-size: 24px;
     line-height: 1.25;
     margin-top: 8px;
   }
+  @include govuk-media-query($until: tablet) {
+    margin: 14px 0 0 0;
+  }
 }
 
 .service-status {
-  border-bottom:1px solid $border-colour;
+  border-bottom:1px solid map.get($govuk-colours, "mid-grey");
   position: relative;
   margin-bottom: -1px;
   padding: 0 15px;
-  @include media(tablet) {
+  @include govuk-media-query(tablet) {
     padding: 0;
   }
   .phase-banner {
-    @include media(tablet) {
+    @include govuk-media-query(tablet) {
       margin: 0 30px;
       max-width: 960px;
       border: none;
     }
-    @include media($desktop) {
+    @include govuk-media-query(desktop) {
       margin: 0 auto;
     }
   }
 }
 
 .header-user {
-  border-bottom:1px solid $border-colour;
+  // border-bottom:1px solid map.get($govuk-colours, "mid-grey");
   .header-inner {
-    border-top: 10px solid $govuk-blue;
+    // border-top: 10px solid map.get($govuk-colours, "blue");
     margin: 0 15px;
     font-size: 14px;
     line-height: 1.2em;
-    @include media(tablet) {
+    @include govuk-media-query(tablet) {
       margin: 0 30px;
       max-width: 960px;
     }
-    @include media($desktop) {
+    @include govuk-media-query(desktop) {
       margin: 0 auto;
     }
   }
   p.signed-in-as {
     margin: 0;
     padding: 12px 0 10px;
-    @include bold-19;
-    @include media(tablet) {
+    @include govuk-font(19, $weight: bold);
+    @include govuk-media-query(tablet) {
       float: left;
     }
   }
   .account-information {
-    @extend %contain-floats;
+    @include govuk-clearfix;
   }
 }
 
@@ -87,7 +87,7 @@
 }
 
 #user-nav {
-  @include media(tablet) {
+  @include govuk-media-query(tablet) {
     font-size: 16px;
     margin: 5px 0;
     float: right;
@@ -97,7 +97,7 @@
     margin-right: -15px;
     list-style: none;
     li {
-      @include media(tablet) {
+      @include govuk-media-query(tablet) {
         float: left;
       }
     }
@@ -105,7 +105,7 @@
   a {
     display: block;
     padding: 12px 15px 10px;
-    color: $black;
+    color: map.get($govuk-colours, "black");
     &:focus {
       outline: 0;
     }
