--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -2,13 +2,14 @@ footer#footer {
   margin-bottom: 80px;
   nav {
     margin-bottom: 20px;
-    @include media(tablet) {
+    @include govuk-media-query(tablet) {
       margin-bottom: 0;
     }
     ul {
       list-style: none;
+      padding: 0;
       li {
-        @include media(tablet) {
+        @include govuk-media-query(tablet) {
           display: inline-block;
           margin-right: 15px;
         }
