--- a/src/sass/_forms.scss
+++ b/src/sass/_forms.scss
@@ -1,5 +1,5 @@
 
-.form-hint {
+.govuk-label__hint {
   p {
 
   }
@@ -12,11 +12,11 @@
 }
 
 fieldset.highlight {
-  background: lighten($grey-3, 5%);
+  background: lighten(map.get($govuk-colours, "light-grey"), 5%);
   padding: 15px;
   box-sizing: border-box;
   margin-bottom: 20px;
-  @include media(tablet) {
+  @include govuk-media-query(tablet) {
     padding: 30px;
   }
   .form-control {
@@ -24,20 +24,20 @@ fieldset.highlight {
   }
 }
 
-.form-group {
-  p.form-hint {
+.govuk-form-group {
+  p.govuk-label__hint {
     margin-bottom: 5px;
   }
   .error-message {
     display: none;
   }
-  &.form-group-error .error-message {
+  &.govuk-form-group-error .govuk-error-message {
     display: block;
   }
   .help-text {
 
   }
-  @include media(tablet) {
+  @include govuk-media-query(tablet) {
     &.indent {
       padding-left: 210px;
     }
@@ -49,7 +49,7 @@ fieldset.highlight {
   margin-bottom: 10px;
 }
 
-.form-group-error {
+.govuk-form-group-error {
   margin-right: 0;
 }
 
@@ -57,10 +57,10 @@ fieldset.highlight {
   width:100%;
 }
 
-@include media(tablet) {
+@include govuk-media-query(tablet) {
   .full-width {
     width:100%;
-    &.form-group-error {
+    &.govuk-form-group-error {
       margin-right: 15px;
     }
   }
@@ -71,7 +71,7 @@ form {
     padding-top: 7px;
     padding-bottom: 5px;
     margin-bottom: 15px;
-    @include media(tablet) {
+    @include govuk-media-query(tablet) {
       margin-bottom: 30px;
     }
   }
@@ -92,7 +92,7 @@ form.inline {
 }
 
 fieldset.with-sub-title {
-  @include media(tablet) {
+  @include govuk-media-query(tablet) {
     position: relative;
     margin-left: 210px;
     width: auto;
@@ -126,7 +126,7 @@ div.show-password {
     top: 0;
     label {
       background-image: url("../images/icon-view-password.png");
-      @include device-pixel-ratio {
+      @include govuk-device-pixel-ratio {
         background-image: url("../images/icon-view-password-2x.png");
         background-size: 27px 27px;
       }
@@ -138,7 +138,7 @@ div.show-password {
       width: 27px;
       height: 27px;
       margin: 2px 5px;
-      @include media(tablet) {
+      @include govuk-media-query(tablet) {
         margin: 5px 7px;
       }
     }
@@ -149,7 +149,7 @@ div.show-password {
     &.type-password {
       label {
         background-image: url("../images/icon-hide-password.png");
-        @include device-pixel-ratio {
+        @include govuk-device-pixel-ratio {
           background-image: url("../images/icon-hide-password-2x.png");
           background-size: 27px 27px;
         }
@@ -158,7 +158,7 @@ div.show-password {
   }
 }
 
-@include media(tablet) {
+@include govuk-media-query(tablet) {
   div.show-password {
     display: inline-block;
     width: 50%;
@@ -183,16 +183,16 @@ div.show-password {
 .button-start,
 .button-get-started {
   background-image: url("../images/icon-pointer.png");
-  @include device-pixel-ratio {
+  @include govuk-device-pixel-ratio {
     background-image: url("../images/icon-pointer-2x.png");
     background-size: 30px 19px;
   }
 }
 
 .button-secondary {
-  @include button($grey-3);
+  // @include button(map.get($govuk-colours, "light-grey"));
   &[disabled="disabled"] {
-    background-color: $grey-3;
+    background-color: map.get($govuk-colours, "light-grey");
   }
 }
 
@@ -213,13 +213,13 @@ div.show-password {
 .buttons {
   .button {
     margin-bottom: 5px;
-    @include media(tablet) {
+    @include govuk-media-query(tablet) {
       display: inline-block;
       margin-right: 5px;
     }
   }
   &.pull-right .button {
-    @include media(tablet) {
+    @include govuk-media-query(tablet) {
       margin-right: 0;
       margin-left: 5px;
     }
@@ -227,25 +227,25 @@ div.show-password {
 }
 
 .delete-org .button-text {
-  color: $link-colour;
+  color: map.get($govuk-colours, "blue");
   text-align: left;
 }
 
 .notification-information .button-text {
-  color: $link-colour;
+  color: map.get($govuk-colours, "blue");
 }
 
 .submit-buttons {
   .button {
     margin-bottom: 10px;
-    @include media(tablet) {
+    @include govuk-media-query(tablet) {
       margin-right: 5px;
     }
   }
 }
 
 .form-submit {
-  @extend .form-group
+  @extend .govuk-form-group
 }
 
 .search-form {
@@ -264,7 +264,7 @@ div.show-password {
   }
   input {
     border: none;
-    border-bottom: 1px solid $black;
+    border-bottom: 1px solid map.get($govuk-colours, "black");
     padding: 7px 0;
     min-width: 300px;
   }
@@ -283,7 +283,7 @@ div.show-password {
       padding: 0 0 0 10px;
       display: block;
       height: 40px;
-      border-color: $black;
+      border-color: map.get($govuk-colours, "black");
       line-height: 38px;
     }
   }
@@ -307,7 +307,7 @@ div.show-password {
       overflow: hidden;
       text-indent: -5000px;
       color: #fff;
-      background-color: $green;
+      background-color: map.get($govuk-colours, "green");
       background-image: url("../images/search-icon.svg");
       background-repeat: no-repeat;
       background-size: 20px 20px;
@@ -327,7 +327,7 @@ form.show-filters {
 }
 
 .select2-container--default .select2-selection--single {
-  border: 2px solid $black;
+  border: 2px solid map.get($govuk-colours, "black");
 }
 
 .select2-container--focus {
@@ -338,7 +338,7 @@ form.show-filters {
 .button-link {
   border: none;
   background: none;
-  color: $link-colour;
+  color: map.get($govuk-colours, "blue");
   text-decoration: underline;
   padding: 0;
   margin: 0;
@@ -347,20 +347,20 @@ form.show-filters {
   cursor: pointer;
   font-size: inherit;
   &:hover {
-    color: $link-hover-colour;
+    color: map.get($govuk-colours, "light-blue");
   }
 }
 
 .filter-link {
   margin-bottom: 15px;
-  @include media(tablet) {
+  @include govuk-media-query(tablet) {
     margin: 7px 0 15px 0;
   }
 }
 
 .email-editor {
   border: 1px solid $border-color;
-  background: $grey-4;
+  background: map.get($govuk-colours, "light-grey");
   padding: 10px;
   .static-text {
     padding: 5px;
@@ -373,7 +373,7 @@ form.show-filters {
 }
 
 form#form-service-config {
-  @include media(tablet) {
+  @include govuk-media-query(tablet) {
     .inputConfig, #secret-input {
       width: 75%
     }
@@ -381,7 +381,7 @@ form#form-service-config {
 }
 
 form#form-new-banner {
-  @include media(tablet) {
+  @include govuk-media-query(tablet) {
     .banner-input {
       width: 65%
     }
