--- a/src/sass/_tables.scss
+++ b/src/sass/_tables.scss
@@ -1,12 +1,12 @@
 table {
-  border-top: 1px solid $black;
-  border-bottom: 2px solid $black;
+  border-top: 1px solid map.get($govuk-colours, "black");
+  border-bottom: 2px solid map.get($govuk-colours, "black");
   margin-bottom: 20px;
   th, td {
     vertical-align: top;
   }
   thead th {
-    border-bottom: 2px solid $black;
+    border-bottom: 2px solid map.get($govuk-colours, "black");
   }
 }
 
@@ -31,19 +31,19 @@ th.sorted, th a.sorted {
     left: 0;
     top: 13px;
     border: 7px solid transparent;
-    border-top-color: $link-colour;
+    border-top-color: map.get($govuk-colours, "blue");
     border-left-width: 5px;
     border-right-width: 5px;
-    @include media(tablet) {
+    @include govuk-media-query(tablet) {
       top: 16px;
     }
   }
   &.dir-a {
     &:before {
       border-top-color: transparent;
-      border-bottom-color: $link-colour;
+      border-bottom-color: map.get($govuk-colours, "blue");
       top: 7px;
-      @include media(tablet) {
+      @include govuk-media-query(tablet) {
         top: 10px;
       }
     }
@@ -51,10 +51,10 @@ th.sorted, th a.sorted {
 }
 
 th a {
-  color:$link-colour;
+  color:map.get($govuk-colours, "blue");
   text-decoration: none;
   &:visited {
-    color: $link-colour;
+    color: map.get($govuk-colours, "blue");
   }
   &:hover {
     text-decoration: underline;
@@ -93,12 +93,12 @@ table tr td:last-child:not(:first-child) {
 }
 
 tr.pending {
-  color: $grey-1;
+  color: map.get($govuk-colours, "dark-grey");
   font-style: italic;
 }
 
 .empty-state {
-  background: $grey-4;
+  background: map.get($govuk-colours, "light-grey");
   padding: 15px;
   text-align: center;
   p {
